# asystem-astate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  build.sh  format.sh
cmake/: astate_config.cmake.in  compiler_flags.cmake  dependencies.cmake  find_astate.cmake.in  install_config.cmake
include/astate/: astate.h  config.h  sharded_key.h  tensor_storage.h  tensor_table.h  types.h
python/: CMakeLists.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
python/astate/: __init__.py  config_converter.py  parallel_config.py  table.py  utils.py
python/astate/_core/: __init__.py
python/examples/: basic_usage.py
python/export/: export.cpp
python/test_rdma/: README.md  setup_infer_env.sh  setup_trainer_env.sh
scripts/: check_tidy_format.sh  ib_traffic.sh  install_as_pylib.sh  install_deps.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt  cuda_utils.h  glog_utils.h  gpu_topology_manager.cpp  gpu_topology_manager.h  lock_utils.h  log_utils.h  macro_utils.h  metric_utils.h  network_utils.h  numa_aware_allocator.h  option.cpp  option.h  queue_utils.h  spdlog_utils.h  string_utils.h  thread_pool.h  time_utils.h
src/common/retry/: counting_retry.cpp  counting_retry.h  exponential_backoff_retry.cpp  exponential_backoff_retry.h  exponential_time_bounded_retry.cpp  exponential_time_bounded_retry.h  retry_policy.h  retry_utils.cpp  retry_utils.h  sleeping_retry.cpp  sleeping_retry.h  time_bounded_retry.cpp  time_bounded_retry.h  timeout_retry.cpp  timeout_retry.h
src/common/test/: CMakeLists.txt  counting_and_sleep_retry_test.cpp  numa_aware_allocator_test.cpp  option_test.cpp  retry_test.cpp  string_utils_test.cpp  thread_pool_test.cpp
src/core/: CMakeLists.txt  atensor.cpp  atensor.h  atensor_storage.cpp  atensor_storage.h  in_memory_tensor_table.cpp  remote_tensor_table.cpp  remote_tensor_table.h  sharded_key.cpp  shardedkey.h  tensor_sharded_ops.cpp  tensor_sharded_ops.h  tensor_table.h  utils.h
src/discovery/: CMakeLists.txt  discovery_manager.cpp  discovery_manager.h  file_config_center.cpp  file_config_center.h  http_config_center.cpp  http_config_center.h  service_discovery.h  tcpstore_discovery.cpp  tcpstore_discovery.h
src/protocol/: CMakeLists.txt  messages.cpp  messages.h
src/protocol/proto/: transfer_service.proto
src/test/: CMakeLists.txt  atensor_serializer_test.cpp  file_config_center_test.cpp  http_transporter_test.cpp  tensor_sharded_ops_test.cpp  tensor_transfer_pull_test.cpp  utils_test.cpp
src/transfer/: CMakeLists.txt  tensor_transfer_pull.cpp  tensor_transfer_pull.h  tensor_transfer_service.h  tensor_transfer_utils.cpp  types.h
src/transport/: CMakeLists.txt  atensor_serializer.cpp  atensor_serializer.h  base_transport.h  brpc_transfer_service.h  brpc_transport.cpp  brpc_transport.h  http_transporter.cpp  http_transporter.h  rdma_transporter.cpp  rdma_transporter.h  transport_builder.h
src/utrans/: CMakeLists.txt  file_utils.c  file_utils.h  id_hash_map.c  id_hash_map.h  list_head.h  log.c  log.h  utils.c  utils.h  utils_helper.c  utils_helper.h  utrans.c  utrans.h  utrans_define.h  utrans_internal.h  utrans_mr_set.c  utrans_mr_set.h
